Updated with New CV

--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Damini Parida | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <header>
         <div class="container">
             <h1>Damini Parida</h1>
-            <p>Kalyan Nagar HRBR Layout, Bangalore | Phone: +91 8847877532 | Email: <a
-                    href="mailto:paridadamini14@gmail.com">paridadamini14@gmail.com</a></p>
+            <p>Kalyan Nagar, HRBR Layout, Bangalore, India | Phone: +91 8847877532 | Email: <a href="mailto:paridadamini14@gmail.com">paridadamini14@gmail.com</a> | <a href="https://www.linkedin.com/in/damini-parida" target="_blank">LinkedIn</a></p>
         </div>
     </header>
     <div class="main-container">
@@ -21,82 +18,68 @@
             <ul class="sidebar-menu">
                 <li><a href="#profile" onclick="showSection('profile')">Profile</a></li>
                 <li><a href="#experience" onclick="showSection('experience')">Experience</a></li>
-                <li><a href="#skills" onclick="showSection('skills')">Skills</a></li>
                 <li><a href="#education" onclick="showSection('education')">Education</a></li>
-                <li><a href="#languages" onclick="showSection('languages')">Languages</a></li>
+                <li><a href="#skills" onclick="showSection('skills')">Skills</a></li>
+                <li><a href="#activities" onclick="showSection('activities')">Activities</a></li>
             </ul>
         </aside>
         <main class="content">
             <section id="profile" class="content-section active">
-                <h2>Profile</h2>
-                <p>Highly motivated and adaptable professional with expertise in SAP Cloud Integration and HR
-                    operations. Transitioning from an HR Executive role to a technical focus on SAP Cloud Platform
-                    Integration, leveraging skills in API integration, error handling, and mapping. Dedicated to
-                    continuous learning and delivering impactful solutions.</p>
+                <h2>Professional Summary</h2>
+                <p>Friendly and engaging team player and leader with a proven ability to inspire staff to perform their best. Proactive and results-driven HR professional with over 2 years of experience in Human Resources operations, employee advocacy, and talent management. Skilled in building strong stakeholder networks, managing multiple priorities in fast-paced environments, and implementing HR policies and procedures. Proficient in HRIS systems and Microsoft Office Suite, with a strong understanding of HR functions and employment legislation.</p>
+                <p>Experienced in supporting HR and business leads in designing and executing employee engagement plans, contributing to retention efforts, and supporting performance management processes.</p>
             </section>
             <section id="experience" class="content-section">
-                <h2>Experience</h2>
+                <h2>Professional Experience</h2>
                 <div class="experience-item">
-                    <h3>SAP Cloud Integration Developer (Intern)</h3>
-                    <span>July 2024 – Nov 2024</span>
+                    <h3>HR Executive | DateTheRamp</h3>
+                    <span>June 2022 – April 2024</span>
                     <ul>
-                        <li>Developed and tested integration scenarios using tools like Postman and ServiceNow.</li>
-                        <li>Created and optimized Groovy Scripts and XSLT mappings for efficient data transformation.
-                        </li>
-                        <li>Built and tested REST and SOAP APIs, ensuring high reliability and performance.</li>
-                        <li>Configured robust error handling mechanisms to manage exceptions and retries.</li>
-                        <li>Designed advanced routing logic to facilitate seamless message flow between diverse systems.
-                        </li>
+                        <li>Processed employee data transactions, including new hires, terminations, and employee updates, ensuring accuracy and compliance with company policies.</li>
+                        <li>Created a cross-training program ensuring DTR members were able to perform confidently and effectively in all positions.</li>
+                        <li>Managed payroll for 250+ employees, ensuring compliance with tax regulations and timely disbursements.</li>
+                        <li>Reduced recruitment turnaround time by 15% through efficient sourcing and screening processes.</li>
+                        <li>Led employee engagement initiatives, achieving a 98% satisfaction rate in annual surveys.</li>
+                        <li>Successfully hired 50+ candidates in a year to meet organizational hiring needs.</li>
                     </ul>
                 </div>
                 <div class="experience-item">
-                    <h3>HR Executive – Date The Ramp</h3>
-                    <span>July 2022 – Apr 2024</span>
+                    <h3>Career Break | Bangalore</h3>
+                    <span>May 2024 – August 2024</span>
                     <ul>
-                        <li>Prepared salary payrolls accurately using Microsoft Excel, ensuring timely and error-free
-                            salary disbursements.</li>
-                        <li>Managed end-to-end recruitment processes including sourcing, screening, and interviewing
-                            candidates.</li>
-                        <li>Developed and implemented HR policies to improve workplace efficiency and employee
-                            satisfaction.</li>
-                        <li>Organized and conducted activities to foster a positive work environment.</li>
-                        <li>Administered employee benefits and compensation programs.</li>
+                        <li>Took a planned career break for marriage and relocation.</li>
+                        <li>Completed SAP CPI training, gaining expertise in system integration and HRIS functionality.</li>
+                        <li>Acquired hands-on experience with SAP SuccessFactors modules.</li>
                     </ul>
-                </div>
-            </section>
-            <section id="skills" class="content-section">
-                <h2>Skills & Abilities</h2>
-                <div class="skills-list">
-                    <div>
-                        <h3>Technical Skills</h3>
-                        <ul>
-                            <li>SAP Cloud Platform Integration (CPI)</li>
-                            <li>Postman, ServiceNow</li>
-                            <li>Groovy Script, XSLT</li>
-                            <li>API Integration, Message Mapping, Error Handling</li>
-                            <li>Batch Processing, Routing</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Soft Skills</h3>
-                        <ul>
-                            <li>Communication and Collaboration</li>
-                            <li>Team Management</li>
-                            <li>Problem-Solving</li>
-                        </ul>
-                    </div>
                 </div>
             </section>
             <section id="education" class="content-section">
                 <h2>Education</h2>
-                <p>MBA - Trident Academy of Creative Technology (2022)</p>
-            </section>
-            <section id="languages" class="content-section">
-                <h2>Languages</h2>
                 <ul>
-                    <li>English (Proficient)</li>
-                    <li>Hindi (Fluent)</li>
-                    <li>Odia (Fluent)</li>
+                    <li><strong>MBA in Human Resources</strong> | Trident Academy of Creative Technology, Bhubaneswar, Odisha | CGPA: 8.5 (May 2020 – April 2022)</li>
+                    <li><strong>B.Sc.</strong> | Utkal University, Bhubaneswar, Odisha | CGPA: 8.5 (May 2017 – April 2020)</li>
+                </ul>
+            </section>
+            <section id="skills" class="content-section">
+                <h2>Skills & Abilities</h2>
+                <ul>
+                    <li>Compensation and Benefits Administration</li>
+                    <li>Payroll Processing</li>
+                    <li>Recruitment & Talent Acquisition</li>
+                    <li>Problem-Solving and Process Optimization</li>
+                    <li>SAP SuccessFactors & SAP CPI</li>
+                    <li>Advanced MS Office (Word, Excel, Outlook)</li>
+                    <li>Employee Engagement & Retention Strategies</li>
+                    <li>Event Management: Town Halls, Celebrations, and Training Programs</li>
+                </ul>
+            </section>
+            <section id="activities" class="content-section">
+                <h2>Activities & Interests</h2>
+                <ul>
+                    <li>Cooking</li>
+                    <li>Event Planning</li>
+                    <li>Traveling</li>
+                    <li>Drawing</li>
                 </ul>
             </section>
         </main>
@@ -114,5 +97,4 @@
         }
     </script>
 </body>
-
 </html>
